@@ -1,3 +1,8 @@
+2009-08-17  Sterling Augustine  <sterling@jaw.hq.tensilica.com>
+
+	* config/tc-xtensa.c (xtensa_frob_label): move call to 
+	do_align_targets to set frag_type only.
+
 2009-08-17  Kai Tietz  <kai.tietz@onevision.com>
 
 	* config/obj-coff-seh.c: New file.
